<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.ypbin.admin</groupId>
    <artifactId>ypbin-admin</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>${project.artifactId}</name>
    <description>基于 ypbin-starter 的企业级后台管理系统</description>

    <modules>
        <module>ypbin-admin-common</module>
        <module>ypbin-admin-system</module>
        <module>ypbin-admin-server</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>4.1.0</spring-boot.version>
        <ypbin-starter.version>1.4.0-SNAPSHOT</ypbin-starter.version>
        <sms4j.version>3.3.5</sms4j.version>
        <lombok.version>1.18.46</lombok.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot 依赖管理（提供 flyway/mysql 等版本） -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- ypbin-starter 统一 BOM（正式版 groupId 为 cn.ypbin） -->
            <dependency>
                <groupId>cn.ypbin</groupId>
                <artifactId>ypbin-starter-bom</artifactId>
                <version>${ypbin-starter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- 本项目模块 -->
            <dependency>
                <groupId>cn.ypbin.admin</groupId>
                <artifactId>ypbin-admin-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.ypbin.admin</groupId>
                <artifactId>ypbin-admin-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- sms4j 短信框架（不在 spring-boot-dependencies 中） -->
            <dependency>
                <groupId>org.dromara.sms4j</groupId>
                <artifactId>sms4j-spring-boot-starter</artifactId>
                <version>${sms4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 所有模块共享：Lombok（编译期生成 getter/setter 等，不进产物） -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <!-- 保留方法参数名：Spring MVC @PathVariable/@RequestParam 依赖参数名解析 -->
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
